* Tue Jul 18 2012 Shane Bradley <sbradley@redhat.com>- 2.12-0.0
- Add detection for GFS/GFS2 using clustered lvm filesystem.
- Add detection for fs.sh resources and verify that HALVM is being used.
* Tue Jul 17 2012 Shane Bradley <sbradley@redhat.com>- 2.11-0.0
- Added new comparision class for comparing clusternodes.
- Added check for cluster names longer than 16 characters.
- Added parser for sos_commands/devicemapper/[lvs_-a_-o_devices | vgs_-v | pvs_-a_-v]
- Added detection of qdisk device and check to see if lvm device which is first iteration of finding and checking.
- Fixed parsing issue on RHEL6 for getting the network interface module being used.
- Fixed parsing issue of failover domains in cluster.conf.
- Added support for multiple clusters detection.
- Display location of directory that contains non-report files.
- Fix bug in checksysreport when there is no data in the file that contains rpms list.
- Fixed bug with checking for "localflocks" mount option on GFS/GFS2 fs.
* Tue Apr 17 2012 Shane Bradley <sbradley@redhat.com>- 2.10-0.0
- Fix sorting issue with cluster nodes if cluster node count was greater than 9.
- Added parser for sos_commands/networking/ip_address.
- Added date data to the cluster summary so that it would state when sosreport/sysreport was created.
- Fix bug where fence devies were not found.
- Fix bug where it was not getting all the mount options for checking GFS mounts.
- Fix bug where ifconfig could not parse spanish ifconfig file
- Fix bug on writing out the aliases for the interfaces.
- Added check in cluster plugin to see if libvirt-guests enabled if there are <vm> in cluster.conf.
* Fri Feb 10 2012 Shane Bradley <sbradley@redhat.com>- 2.09-0.0
- Added detection for fence_vmware agent
- Fixed bug where clusternode names that were IPv4 address was not detected.
- Changed old knowledge base urls to the new urls.
* Fri Feb 10 2012 Shane Bradley <sbradley@redhat.com>- 2.08-0.0